--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/slick-theme.css">
-    <link rel="stylesheet" href="css/slick.css">
+    
+    
     <!--슬릭-->
+    <link rel="stylesheet" href="js/jquery-1.11.0.min.js">
+    <link rel="stylesheet" href="js/slick.min.js">
+    <link rel="stylesheet" href="slick/slick-theme.css">
+    <link rel="stylesheet" href="slick/slick.css">
+
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
         <script>
         $(document).ready(function(){
             $('.altoolsAni').slick({
                 rows: 2,
                 slidesPerRow: 4,
                 autoplay: true,
-                autoplaySpeed: 2000,
+                autoplaySpeed: 1500,
                 dots: false,
                 infinite: false,
                 arrows: true
@@ -35,7 +40,7 @@
                 slidesToShow: 1,
                 slidesToScroll: 1,
                 autoplay: true,
-                autoplaySpeed: 2000,
+                autoplaySpeed: 1500,
                 speed:3000,
                 fade: false,
                 dots: false,
