--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <script type="text/javascript" src="js/jquery-3.7.1.js"></script>
     <script type="text/javascript" src="js/jquery-3.7.0.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" type="text/javascript"></script>
-    <script type="text/javascript">
+
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+        <script type="text/javascript">
         $(document).ready(function(){
             $('.altoolsAni').slick({
                 rows: 2,
@@ -30,7 +35,7 @@
                 autoplay: true,
                 autoplaySpeed: 1500,
                 dots: false,
-                infinite: false,
+                infinite: true,
                 arrows: true
             });
         });
@@ -39,8 +44,8 @@
                 slidesToShow: 1,
                 slidesToScroll: 1,
                 autoplay: true,
-                autoplaySpeed: 1500,
-                speed:3000,
+                autoplaySpeed: 1800,
+                speed: 1800,
                 fade: false,
                 dots: false,
                 infinite: true,
